# kingfisher-summarize

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .sqlfluffignore  .travis.yml  MANIFEST.in  README.md  README.rst  manage.py  ocdskingfisher-views-cli  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.py  views_refresh_order.json
.github/workflows/: ci.yml  lint.yml
docs/: adding-and-updating-views.rst  changelog.rst  cli-add-view.rst  cli-correct-user-permissions.rst  cli-delete-view.rst  cli-development-commands.rst  cli-field-counts.rst  cli-list-views.rst  cli-refresh-views.rst  cli-reset-database.rst  cli-upgrade-database.rst  cli.rst  conf.py  config.rst  database.rst  develop.rst  get-started.rst  index.rst  logging.rst  querying-data.rst  requirements-install.rst  requirements.txt  users.rst  view-reference.rst  views.rst
docs/_static/: basic.css  config.ini
docs/_templates/: layout.html
docs/cli/: add-view.rst  correct-user-permissions.rst  delete-view.rst  develop.rst  development-commands.rst  field-counts.rst  index.rst  list-views.rst  refresh-views.rst  reset-database.rst  setup.rst  upgrade-database.rst  use.rst
docs/definitions/: award_documents_summary.csv  award_items_summary.csv  award_suppliers_summary.csv  awards_summary.csv  awards_summary_no_data.csv  buyer_summary.csv  contract_documents_summary.csv  contract_implementation_documents_summary.csv  contract_implementation_milestones_summary.csv  contract_implementation_transactions_summary.csv  contract_items_summary.csv  contract_milestones_summary.csv  contracts_summary.csv  contracts_summary_no_data.csv  field_counts.csv  note.csv  parties_summary.csv  parties_summary_no_data.csv  planning_documents_summary.csv  planning_milestones_summary.csv  planning_summary.csv  planning_summary_no_data.csv  procuringEntity_summary.csv  relatedprocesses_summary.csv  release_summary.csv  release_summary_no_data.csv  release_summary_with_checks.csv  release_summary_with_data.csv  selected_collections.csv  summaries.selected_collections.csv  tender_documents_summary.csv  tender_items_summary.csv  tender_milestones_summary.csv  tender_summary.csv  tender_summary_no_data.csv  tender_summary_with_data.csv  tenderers_summary.csv
docs/develop/: howtos.rst  index.rst  learn.rst  setup.rst  sql.rst
docs/reference/: database.rst  index.rst
docs/view_definitions/: award_documents_summary.csv  award_items_summary.csv  award_suppliers_summary.csv  awards_summary.csv  buyer_summary.csv  contract_implementation_documents_summary.csv  contract_implementation_transactions_summary.csv  contract_items_summary.csv  contract_milestones_summary.csv  contracts_summary.csv  (+16 more)
mapping_sheets/: 1-1-3.csv
migrations/: env.py  migration_0001_move_selected_collections.py  script.py.mako
ocdskingfishersummarize/: db.py  exceptions.py
ocdskingfisherviews/: __init__.py  add_view.py  alembic.ini  cli.py  config.py  correct_user_permissions.py  db.py  exceptions.py  field_counts.py  refresh_views.py
samples/: logging-debug.json  logging.json
sql/: 001-functions.sql  001-functions_downgrade.sql  002-tmp_release_and_parties.sql  002-tmp_release_and_parties_downgrade.sql  003-buyer-procuringentity-tenderer.sql  003-buyer-procuringentity-tenderer_downgrade.sql  003-buyer.sql  004-planning.sql  004-planning_downgrade.sql  005-tender.sql  005-tender_downgrade.sql  006-awards.sql  006-awards_downgrade.sql  007-contracts.sql  007-contracts_downgrade.sql  008-release.sql  008-release_downgrade.sql  009-drop-tmp_release_summary.sql  009-field-counts.sql  009-field-counts_downgrade.sql  050-tender.sql  060-awards.sql  080-release.sql  998-foreign-key-relationships.sql  999-docs.sql
tests/: __init__.py  conftest.py  test_add.py  test_add_view.py  test_config.py  test_correct_user_permissions.py  test_delete.py  test_delete_view.py  test_docs.py  test_field_counts.py  test_functions.py  test_index.py  test_install.py  test_list_views.py  test_refresh_view.py  test_refresh_views.py  test_util.py
(+94 files in other folders)
