[project]
name = "kingfisher-summarize"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "DTZ",
    "PTH",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
"manage.py" = [
    "ARG001",  # click
    "D301",  # click escapes
    "PLW2901",
    "TRY003",  # errors
]
"migrations/*" = ["INP001"]

[tool.coverage.run]
concurrency = ["multiprocessing"]
parallel = true
sigterm = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.sqlfluff.core]
dialect = "postgres"
exclude_rules = [
    "L034", # structure.column_order
    "ST05", # structure.subquery
    "ST09", # structure.join_condition_order
    # TBD
    "AM04", # ambiguous.column_count
    "LT05", # layout.long_lines
    "RF02", # references.qualification
    "RF04", # references.keywords
    "ST07", # structure.using
]
max_line_length = 100
large_file_skip_byte_limit = 40000
